force-app/main/default/objects/Bundle_Discount__mdt/Bundle_Discount__mdt.object-meta.xml
<CustomObject>
    <description>Drempels en percentages voor bundelkortingen per dienst.</description>
    <label>Bundle Discount</label>
    <pluralLabel>Bundle Discounts</pluralLabel>
</CustomObject>