force-app/main/default/objects/Bundle_Discount__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Alleen records met Active = true worden gebruikt.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>