force-app/main/default/objects/Bundle_Discount__mdt/fields/Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percent__c</fullName>
    <description>Kortingspercentage als decimaal (bijv. 0.05 = 5%)</description>
    <label>Discount Percent</label>
    <precision>10</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
</CustomField>