force-app/main/default/objects/Bundle_Discount__mdt/fields/Min_Count__c.field-meta.xml
<CustomField>
    <fullName>Min_Count__c</fullName>
    <description>Minimum aantal items waarop deze korting van toepassing is.</description>
    <label>Min Count</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>