force-app/main/default/objects/Bundle_Discount__mdt/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wasserij</fullName>
                <default>true</default>
                <label>Wasserij</label>
            </value>
            <value>
                <fullName>Dakkapel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>